fix: No wrap date time column

--- a/src/panel/css/table.css
+++ b/src/panel/css/table.css
@@ -37,6 +37,7 @@
 
   td .time {
     opacity: 0.75;
+    text-wrap: nowrap;
   }
 
   td button.href-button {
